--- a/MoreMapMarkers.csproj
+++ b/MoreMapMarkers.csproj
@@ -6,7 +6,8 @@
         <AssemblyTitle>More Map Markers</AssemblyTitle>
         <Product>More Map Markers</Product>
         <Description>A Hollow Knight Mod</Description>
-        <Copyright>Copyright © SFGrenade 2019-2021</Copyright>
+        <Copyright>Copyright © SFGrenade 2024</Copyright>
+        <PathMap>$(MSBuildProjectDirectory)=source</PathMap>
         <AssemblyVersion>1.5.1.0</AssemblyVersion>
         <FileVersion>1.5.1.0</FileVersion>
         <OutputPath>bin/$(Configuration)/</OutputPath>
